--- a/www/main.scss
+++ b/www/main.scss
@@ -17,30 +17,45 @@ html, body{
 		font-size: 18px	;
 		color: #fff;
 		font-weight: 300;
-		background: #003a56;
+		background: #13b0bf;
 	}
 	.row{
 		.col-sm-4{
 			form{
 				height: 100vh;
 				border-radius: 0;
-				border: 2px solid #003a56;
+				border: 2px solid #13b0bf;
+				padding-bottom: 24px;
 				border-top: 0;
+				overflow: scroll;
 				input[type="text"]{
 					border-radius: 0;
-					border: 2px solid #003a56;
+					border: 2px solid #13b0bf;
 				}
-				#action{width: 100%; font-weight: 700; color: #fff; background: #003a56; border-radius:0; &:hover{opacity: 0.8;}}
+				#action{width: 100%; font-weight: 700; color: #fff; background: #13b0bf; border-radius:0; letter-spacing: 4px; &:hover{opacity: 0.8;}}
 				.config{
 					padding: 18px 12px 8px 12px;
-					border-bottom: 1px solid #003a56;
+					border-bottom: 1px solid #13b0bf;
 					display: block;
+					.button{float: right; font-weight:700;background:transparent;border:none;cursor:pointer;}
 				}
+				h6{
+					margin-top: 18px;
+					font-weight: 700;
+				}
+				#radio{
+					label{display: block;}
+					.shiny-options-group{width: 100%; display: inline-block; display: inline-flex;}
+					.radio{flex: 1 1 0; margin: 10px 0; font-size: 10px; input{margin-top: 0;}}
+				}
+				.slider{margin-bottom: 0;}
 			}
 		}
 		.col-sm-8{
 			padding: 12px 42px 0 0;
 			svg{width: 100%;}
+			.shiny-output-error{color: #1ec5db; font-weight: 700;}
+			.y2tick text{letter-spacing:initial;}
 		}
 	}
 }
