--- a/www/main.scss
+++ b/www/main.scss
@@ -71,6 +71,8 @@ html, body{
 				padding-bottom:24px;
 				white-space: nowrap
 			}
+			#weblink{font-size: 10px;}
+			.gtitle{font-weight:700 !important;}
 		}
 	}
 }
